<resources>
    <string name="app_name">Volleyball Passing</string>
    <string name="instruct">Choose the pass value to add to the total.</string>
    <string name="button_zero" translatable="false">0</string>
    <string name="button_one" translatable="false">1</string>
    <string name="button_two" translatable="false">2</string>
    <string name="button_three" translatable="false">3</string>
    <string name="passing_stats">Average (0): 0\n Zeros: 0 Ones: 0 Twos: 0 Threes: 0</string>
    <string name="button_reset">Reset</string>
    <string name="one_player">1 Player</string>
    <string name="two_players">2 Players</string>
    <string name="p1">Player 1</string>
    <string name="p2">Player 2</string>
    <string name="p3">Player 3</string>
    <string name="p4">Player 4</string>
    <string name="p5">Player 5</string>
    <string name="p6">Player 6</string>
    <string name="about">About</string>
    <string name="title_activity_about">About Volleyball Passing Stats</string>
    <string name="about_title">Volleyball Passing Stats</string>
    <string name="copyright">Copyright © 2018 Cody J. King. All rights reserved.</string>
    <string name="privacy_policy_link"><a href="http://codyjking.com/privacy-policy.html">Privacy Policy</a></string>
    <string name="version">Version V</string>
    <string name="about_icon_description">App icon</string>
    <string name="player1_name_hint">Player 1 name</string>
    <string name="player2_name_hint">Player 2 name</string>
    <string name="player3_name_hint">Player 3 name</string>
    <string name="player4_name_hint">Player 4 name</string>
    <string name="player5_name_hint">Player 5 name</string>
    <string name="player6_name_hint">Player 6 name</string>
    <string name="settings">Settings</string>
    <string name="rb_1p">1 Player</string>
    <string name="rb_2p">2 Players</string>
    <string name="rb_3p">3 Players</string>
    <string name="rb_4p">4 Players</string>
    <string name="rb_5p">5 Players</string>
    <string name="rb_6p">6 Players</string>
    <string name="settings_title">Choose the number of players</string>
</resources>
