<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.codyjking.volleyballpassingstats.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/p1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:tag="p1"
                android:onClick="addZero"
                android:text="@string/button_zero"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button1"
                app:layout_constraintTop_toBottomOf="@+id/p1_name" />

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:tag="p1"
                android:onClick="addOne"
                android:text="@string/button_one"
                app:layout_constraintLeft_toRightOf="@+id/button0"
                app:layout_constraintRight_toLeftOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/p1_name" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:tag="p1"
                android:onClick="addTwo"
                android:text="@string/button_two"
                app:layout_constraintLeft_toRightOf="@+id/button1"
                app:layout_constraintRight_toLeftOf="@+id/button3"
                app:layout_constraintTop_toBottomOf="@+id/p1_name" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:tag="p1"
                android:onClick="addThree"
                android:text="@string/button_three"
                app:layout_constraintLeft_toRightOf="@+id/button2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/p1_name" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:tag="p1"
                android:onClick="reset"
                android:text="@string/button_reset"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats" />

            <TextView
                android:id="@+id/instructs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/instruct"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/p1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/p1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:focusable="true"
                android:focusableInTouchMode ="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructs"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/player1_name_hint"/>

            <TextView
                android:id="@+id/stats"
                android:tag="p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/passing_stats"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button0" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/p2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/p1_layout">

            <EditText
                android:id="@+id/p2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/p2"
                android:textAlignment="center"
                android:textSize="22sp"
                android:focusable="true"
                android:focusableInTouchMode ="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"
                android:importantForAutofill="no"
                android:hint="@string/player2_name_hint"/>

            <Button
                android:id="@+id/button00"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:tag="p2"
                android:onClick="addZero"
                android:text="@string/button_zero"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button11"
                app:layout_constraintTop_toBottomOf="@+id/p2_name" />

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:tag="p2"
                android:onClick="addOne"
                android:text="@string/button_one"
                app:layout_constraintLeft_toRightOf="@+id/button00"
                app:layout_constraintRight_toLeftOf="@+id/button22"
                app:layout_constraintTop_toBottomOf="@+id/p2_name"
                tools:layout_editor_absoluteX="96dp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:tag="p2"
                android:onClick="addTwo"
                android:text="@string/button_two"
                app:layout_constraintLeft_toRightOf="@+id/button11"
                app:layout_constraintRight_toLeftOf="@+id/button33"
                app:layout_constraintTop_toBottomOf="@+id/p2_name"
                tools:layout_editor_absoluteX="200dp" />

            <Button
                android:id="@+id/button33"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:tag="p2"
                android:onClick="addThree"
                android:text="@string/button_three"
                app:layout_constraintLeft_toRightOf="@+id/button22"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/p2_name" />

            <Button
                android:id="@+id/buttonReset2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="reset"
                android:tag="p2"
                android:text="@string/button_reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats2" />

            <TextView
                android:id="@+id/stats2"
                android:tag="p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/passing_stats"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button00" />

        </android.support.constraint.ConstraintLayout>

        <ToggleButton
            android:id="@+id/playerToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:textOff="@string/two_players"
            android:textOn="@string/one_player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>